player scores/style.css
* {
    /* Change your font family */
    font-family: sans-serif;
}

html{
    background-color: rgb(206, 238, 248);
}

h1 {
    background-color: #009879;
    color: #ffffff;
    padding: 12px 15px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
    font-size: 1.7em;
    text-align: center;
}

table {
    border-collapse: collapse;
    margin: 25px 0;
    font-size: 0.9em;
    min-width: 400px;
    border-radius: 5px 5px 0 0;
    overflow: hidden;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
    text-align: center;
}

table thead tr {
    background-color: #009879;
    color: #ffffff;
    text-align: left;
    font-weight: bold;
}

table th,
table td {
    padding: 12px 15px;
}

table tbody tr {
    border-bottom: 1px solid #dddddd;
}

table tbody tr:nth-of-type(even) {
    background-color: #f3f3f3;
}

table tbody tr:last-of-type {
    border-bottom: 2px solid #009879;
}

table tbody tr.active-row {
    font-weight: bold;
    color: #009879;
}

